Fixed background cut off

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -349,6 +349,10 @@
 }
 
 .home-section .home-content {
-  position: relative;
+  position: fixed;
   top: 60px;
+  left: 260px;
+  width: calc(100% - 260px);
+  bottom: 0;
+  overflow-y: auto;
 }
